deployments/garage/templates/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
  annotations:
    tailscale.com/tailnet-fqdn: s3.rooster-piranha.ts.net
    tailscale.com/proxy-group: tailscale-egress-proxies
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - port: 443
      protocol: TCP
      name: https
