deployments/garage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage
  annotations:
    tailscale.com/proxy-group: tailscale-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: garage
      port:
        name: s3-api
  tls:
    - hosts: ["s3"]
